--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,10 @@
       .dawn-blue{
         color: #255d98 !important;
       }
+      .dawn-blue-bg{
+        background: #255d98 !important;
+        color: white;
+      }
     </style>
     {% endblock extra_css %}
   {% endblock css %}
