--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -46,7 +46,7 @@
                     By <strong>{{ post.author }}</strong> · {{ post.created_at|date:"F j, Y" }} · <i class="icofont-read-book"></i> {{ post.view_count }}
                   </p>
 
-                  <p class="flex-grow-1 text-muted">{{ post.content|truncatewords:25 }}</p>
+                  <p class="flex-grow-1 text-muted">{{ post.content|safe|truncatewords:25 }}</p>
 
                   <a href="{% url 'blog_detail' post.slug %}" class="btn btn-outline-primary w-100 mt-3">
                     Read More →
