--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -3,8 +3,18 @@
 
 {% block title %}Blog{% endblock %}
 
+
+{% block extra_css %}
+<style>
+.post-content p {
+  color: #6c757d; /* pure black */
+}
+</style>
+{% endblock extra_css %}
+  
+
 {% block content %}
-  {% include 'partials/theme-switch.html' %}
+{% include 'partials/theme-switch.html' %}
 
 <main class="main_wrapper overflow-hidden">
 
@@ -46,7 +56,14 @@
                     By <strong>{{ post.author }}</strong> · {{ post.created_at|date:"F j, Y" }} · <i class="icofont-read-book"></i> {{ post.view_count }}
                   </p>
 
-                  <p class="flex-grow-1 text-muted">{{ post.content|safe|truncatewords:25 }}</p>
+                  {% comment %} <p class="flex-grow-1 text-muted">{{ post.content|safe|truncatewords:25 }}</p> {% endcomment %}
+                  <div class="flex-grow-1 text-muted post-content">
+                    {{ post.content|truncatewords_html:25|safe }}
+                  </div>
+
+
+                  
+
 
                   <a href="{% url 'blog_detail' post.slug %}" class="btn btn-outline-primary w-100 mt-3">
                     Read More →
