--- a/templates/partials/top-banner.html
+++ b/templates/partials/top-banner.html
@@ -4,8 +4,7 @@
       <div class="col-12">
         <ul class="list-unstyled mb-0">
           <li>
-            Dawn of Bioinformatics
-            <i class="icofont-long-arrow-right"></i>
+            <a href="https://dawnofbioinformatics.com/">Dawn of Bioinformatics <i class="icofont-long-arrow-right"></i></a>
           </li>
         </ul>
       </div>
