--- a/courses/templates/courses/course-list.html
+++ b/courses/templates/courses/course-list.html
@@ -202,7 +202,7 @@
                                     <div class="gridarea__price">
                                         ৳{{ course.price }} {% if course.original_price %}<del>/ ৳{{ course.original_price }}</del>{% endif %}
                                         {% if course.price > 0 %}
-                                            <span class="text-danger small">Paid</span>
+                                            <span class="text-danger small"></span>
                                         {% else %}
                                             <span class="text-success small">Free</span>
                                         {% endif %}
