--- a/templates/partials/top-banner.html
+++ b/templates/partials/top-banner.html
@@ -4,7 +4,7 @@
       <div class="col-12">
         <ul class="list-unstyled mb-0">
           <li>
-            <a href="https://dawnofbioinformatics.com/" target="_blank">Dawn of Bioinformatics <i class="icofont-long-arrow-right"></i></a>
+            <a href="https://dawnofbioinformatics.com/" target="_blank" class="text-white">Dawn of Bioinformatics <i class="icofont-long-arrow-right"></i></a>
           </li>
         </ul>
       </div>
