--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -41,7 +41,7 @@
                 
                 {% if post.image %}
                   <div class="ratio ratio-16x9">
-                    <img src="{{ post.image.url }}" alt="{{ post.title }}" class="img-fluid object-fit-cover">
+                    <img src="{{ post.image.url }}" alt="{{ post.title }}" class="img-fluid" style="width: 100%; height: 100%; object-fit: cover;">
                   </div>
                 {% endif %}
                 
