--- a/courses/templates/courses/course-details.html
+++ b/courses/templates/courses/course-details.html
@@ -306,40 +306,16 @@
                     <div class="course__details__sidebar">
                         <div class="event__sidebar__wraper" data-aos="fade-up">
 
-                            <div class="blogarae__img__2 course__details__img__2" data-aos="fade-up">
-
-                                {% comment %} {% if intro_video_thumbnail %}
-                                    <img loading="lazy" src="{{ intro_video_thumbnail }}" alt="blog">
-                                {% endif %} {% endcomment %}
-
-                                <div class="registerarea__content course__details__video">
-                                    <div class="registerarea__video">
-                                        {% comment %} <div class="video__pop__btn">
-                                            <a class="video-btn" href="{{ course.intro_video_url }}">
-                                                <img loading="lazy" src="{% static 'img/icon/video.png' %}" alt=""></a>
-                                        </div> {% endcomment %}
-                                    </div>
-                                </div>
-
-                                <div style="position: relative; width: 100%; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-                                    {% comment %} <iframe 
-                                        src="https://www.youtube.com/embed/sH0te4d6grc?si=f0c6EaiL6RRyk4KQ&controls=0&rel=0" 
-                                        title="YouTube video player" 
-                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                                        allowfullscreen
-                                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;">
-                                    </iframe> {% endcomment %}
-                                    <iframe
-                                        src="{{ course.intro_video_url }}?controls=0"
-                                        title="YouTube video player" frameborder="0"
-                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                        referrerpolicy="strict-origin-when-cross-origin"
-                                        allowfullscreen>
-                                    </iframe>
-                                </div>
-
+                            
+                            <div class="registerarea__video mb-4">
+                                <iframe width="100%" height="250"
+                                    src="{{ course.intro_video_url }}"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                                </iframe>
                             </div>
-
+                            
                             <div class="event__price__wraper">
 
                                 <div class="event__price">
