--- a/training/templates/training/training_list.html
+++ b/training/templates/training/training_list.html
@@ -27,6 +27,17 @@
               </div>
           </div>
       </div>
+
+      <div class="shape__icon__2">
+            <img loading="lazy" class=" shape__icon__img shape__icon__img__1"
+                src="{% static 'img/herobanner/herobanner__1.png' %}" alt="photo">
+            <img loading="lazy" class=" shape__icon__img shape__icon__img__2"
+                src="{% static 'img/herobanner/herobanner__2.png' %}" alt="photo">
+            <img loading="lazy" class=" shape__icon__img shape__icon__img__3"
+                src="{% static 'img/herobanner/herobanner__3.png' %}" alt="photo">
+            <img loading="lazy" class=" shape__icon__img shape__icon__img__4"
+                src="{% static 'img/herobanner/herobanner__5.png' %}" alt="photo">
+      </div>
   </div>
 
   <div class="container mt-5">
