--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,9 @@
         background: #255d98 !important;
         color: white;
       }
+      .mode_switcher.my_switcher {
+        top: 140px !important;
+      }
     </style>
     {% endblock extra_css %}
   {% endblock css %}
