--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -34,6 +34,7 @@
           <div class="headerarea__main__menu">
             <nav>
               <ul>
+                <li><a href="/">Home</a></li>
                 <li><a href="{% url 'course_list' %}">Short Courses</a></li>
                 <li><a href="{% url 'training_list' %}">Training</a></li>
                 <li><a href="{% url 'intern_list' %}">Internship</a></li>
