--- a/courses/templates/courses/course-list.html
+++ b/courses/templates/courses/course-list.html
@@ -117,7 +117,7 @@
                     <div class="tab-content tab__content__wrapper" id="myTabContent">
 
                         <!-- Grid View Tab -->
-                        <div class="tab-pane fade" id="projects__one" role="tabpanel" aria-labelledby="projects__one-tab">
+                        <div class="tab-pane fade show active" id="projects__one" role="tabpanel" aria-labelledby="projects__one-tab">
                             <div class="row">
                                 {% for course in courses %}
                                 <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6 col-12" data-aos="fade-up">
@@ -175,7 +175,7 @@
                         </div>
 
                         <!-- List View Tab -->
-                        <div class="tab-pane fade show active" id="projects__two" role="tabpanel" aria-labelledby="projects__two-tab">
+                        <div class="tab-pane fade" id="projects__two" role="tabpanel" aria-labelledby="projects__two-tab">
                             {% for course in courses %}
                             <div class="gridarea__wraper gridarea__wraper__2 gridarea__course__list" data-aos="fade-up">
                                 <div class="gridarea__img">
