--- a/courses/templates/courses/course-list.html
+++ b/courses/templates/courses/course-list.html
@@ -96,12 +96,12 @@
                         <div class="course__icon">
                             <ul class="nav property__team__tap" id="myTab" role="tablist">
                                 <li class="nav-item" role="presentation">
-                                    <a id="projects__one-tab" href="javascript:void(0)" class="single__tab__link" data-bs-toggle="tab" data-bs-target="#projects__one" role="tab" aria-controls="projects__one" aria-selected="false">
+                                    <a id="projects__one-tab" href="javascript:void(0)" class="single__tab__link active" data-bs-toggle="tab" data-bs-target="#projects__one" role="tab" aria-controls="projects__one" aria-selected="false">
                                         <i class="icofont-layout"></i>
                                     </a>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <a id="projects__two-tab" href="javascript:void(0)" class="single__tab__link active" data-bs-toggle="tab" data-bs-target="#projects__two" role="tab" aria-controls="projects__two" aria-selected="true">
+                                    <a id="projects__two-tab" href="javascript:void(0)" class="single__tab__link" data-bs-toggle="tab" data-bs-target="#projects__two" role="tab" aria-controls="projects__two" aria-selected="true">
                                         <i class="icofont-listine-dots"></i>
                                     </a>
                                 </li>
