--- a/courses/templates/courses/course-details.html
+++ b/courses/templates/courses/course-details.html
@@ -113,13 +113,14 @@
                                         </li>
                                         <li class="nav-item" role="presentation">
                                             <button class="single__tab__link" data-bs-toggle="tab"
-                                                data-bs-target="#projects__four" type="button"><i
-                                                    class="icofont-teacher"></i>Instructor</button>
+                                                data-bs-target="#projects__three" type="button">
+                                                <i class="icofont-ui-note"></i>Description
+                                            </button>
                                         </li>
                                         <li class="nav-item" role="presentation">
                                             <button class="single__tab__link" data-bs-toggle="tab"
-                                                data-bs-target="#projects__three" type="button"><i
-                                                    class="icofont-teacher"></i>Description</button>
+                                                data-bs-target="#projects__four" type="button"><i
+                                                    class="icofont-teacher"></i>Instructor</button>
                                         </li>
                                     </ul>
                                 </div>
