--- a/courses/templates/courses/verify_certificate.html
+++ b/courses/templates/courses/verify_certificate.html
@@ -4,7 +4,7 @@
 
 {% block title %}Password Reset{% endblock %}
 
-{% include 'partials/theme-switch.html' %}
+{% comment %} {% include 'partials/theme-switch.html' %} {% endcomment %}
 
 {% block content %}
 
