--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -3,7 +3,7 @@
 {% block title %}{{ post.title }}{% endblock %}
 
 {% block content %}
-  {% include 'partials/theme-switch.html' %}
+{% comment %} {% include 'partials/theme-switch.html' %} {% endcomment %}
 <main class="main_wrapper overflow-hidden">
 
   {% include 'partials/top-banner.html' %}
