--- a/courses/templates/courses/course-list.html
+++ b/courses/templates/courses/course-list.html
@@ -24,7 +24,7 @@
     
 
 {% block content %}
-{% include 'partials/theme-switch.html' %}
+{% comment %} {% include 'partials/theme-switch.html' %} {% endcomment %}
 
 <main class="main_wrapper overflow-hidden">
 
