--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -60,14 +60,14 @@
 
                 </div>
 
-                <div class="herobannerarea__icon__2">
+                {% comment %} <div class="herobannerarea__icon__2">
                     <img loading="lazy" class="herobanner__common__img herobanner__img__1"
                         src="{% static 'img/herobanner/herobanner__1.png' %}" alt="photo">
                     <img loading="lazy" class="herobanner__common__img herobanner__img__4"
                         src="{% static 'img/herobanner/herobanner__3.png' %}" alt="photo">
                     <img loading="lazy" class="herobanner__common__img herobanner__img__5"
                         src="{% static 'img/herobanner/herobanner__5.png' %}" alt="photo">
-                </div>
+                </div> {% endcomment %}
             </div>
         </div>
     </div>
