--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -38,6 +38,9 @@
                 <li>
                   <a href="https://dawnofbioinformatics.com/">Dawn of Bioinformatics</a>
                 </li>
+                <li>
+                  <a href="https://soash.github.io/" target="_blank">Developers</a>
+                </li>
               </ul>
             </div>
           </div>
