--- a/training/templates/training/training_detail.html
+++ b/training/templates/training/training_detail.html
@@ -36,7 +36,7 @@
 
         <div class="mt-4">
           {% if training.registration_link %}
-            <a href="{{ training.registration_link }}" target="_blank" class="btn btn-primary">Apply Now</a>
+            <a href="{{ training.registration_link }}" target="_blank" class="btn btn-primary">Registration Now</a>
           {% else %}
             <button class="btn btn-secondary" disabled>Registration TBA</button>
           {% endif %}
