--- a/training/templates/training/training_list.html
+++ b/training/templates/training/training_list.html
@@ -78,6 +78,7 @@
     </div>
 
     <!-- Detailed List -->
+  {% comment %}
   {% for training in trainings %}
     <div class="row mb-5 border-bottom p-4 align-items-center shadow-lg">
       <div class="col-md-6">
@@ -109,8 +110,67 @@
       </div>
     </div>
   {% endfor %}
+  {% endcomment %}
 
-  </div>
+  {% for training in trainings %}
+    <div class="col-xxl-3 col-xl-4 col-lg-6 col-md-6 col-sm-6 col-12" data-aos="fade-up">
+        <div class="gridarea__wraper gridarea__wraper__2 zoom__meeting__grid ">
+            <div class="gridarea__img">
+                <a href="#">
+                  {% if training.thumbnail %}
+                    <img loading="lazy" src="{{ training.thumbnail.url }}" alt="grid">
+                  {% else %}
+                    <img loading="lazy" src="{% static 'img/zoom/1.jpg' %}" alt="grid">
+                  {% endif %}
+                </a>
+            </div>
+            <div class="gridarea__content ">
+                <div class="gridarea__list">
+                    <ul>
+                        <li>
+                            <i class="icofont-calendar"></i> {{ training.date }}
+                        </li>
+                        {% comment %} <li>
+                            <i class="icofont-clock-time"></i> 1 hr 30 min
+                        </li> {% endcomment %}
+                    </ul>
+                </div>
+                <div class="gridarea__heading">
+                    <h3><a href="{% url 'training_detail' training.slug %}"> {{ training.name }} </a></h3>
+                </div>
+
+                <div class="zoom__meeting__time__id">
+                    <div class="zoom__meeting__time">
+                        <p>
+                            Medium:
+                            <span>{{ training.get_medium_display }}</span>
+                        </p>
+                    </div>
+                    <div class="zoom__meeting__id">
+                        {% if training.platform %}
+                            <p>Platform :<span>{{ training.get_platform_display }}</span></p>
+                        {% else %}
+                            <p>Branch :<span>{{ training.get_branch_display }}</span></p>
+                        {% endif %}
+                    </div>
+                </div>
+                <div class="gridarea__bottom">
+                  <div class="gridarea__small__img">
+                    {% if training.instructor.profile_picture %}
+                      <img src="{{ training.instructor.profile_picture.url }}" width="50" height="50">
+                    {% else %}
+                      <img loading="lazy" src="{% static 'img/grid/grid_small_1.jpg' %}" alt="grid">
+                    {% endif %}
+                      <div class="gridarea__small__content">
+                          Instructor: <h5>{{ training.instructor.first_name }}</h5>
+                      </div>
+                  </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+  {% endfor %}
 
   
 
