--- a/training/templates/training/training_list.html
+++ b/training/templates/training/training_list.html
@@ -58,7 +58,11 @@
           {% for training in trainings %}
           <tr>
             <td>{{ training.name }}</td>
-            <td>{{ training.get_medium_display }}</td>
+            <td>{{ training.get_medium_display }}
+              {% if training.branch %}
+                - {{ training.get_branch_display }}
+              {% endif %}
+            </td>
             <td>{{ training.date|date:"M d, Y" }}</td>
             <td>
               {% if training.registration_link %}
